Tools/DumpRenderTree/chromium/TestShell.cpp
@@ -227,6 +227,7 @@ void TestShell::resetTestController()
     m_drtDevToolsAgent->reset();
     if (m_drtDevToolsClient)
         m_drtDevToolsClient->reset();
+    webView()->mainFrame()->clearOpener();
 }
 
 void TestShell::loadURL(const WebURL& url)
