third_party/WebKit/Source/WebKit/mac/WebView/WebFramePrivate.h
@@ -146,4 +146,8 @@ typedef enum {
 // The top of the accessibility tree.
 - (id)accessibilityRoot;
 
+// Clears frame opener. This is executed between layout tests runs
+- (void)_clearOpener;
+
+
 @end
