third_party/WebKit/Tools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -896,6 +896,10 @@ static void resetWebViewToConsistentStateBeforeTesting()
     sharedUIDelegate->resetUndoManager();
 
     sharedFrameLoadDelegate->resetToConsistentState();
+
+    COMPtr<IWebFramePrivate> framePrivate;
+    if (SUCCEEDED(frame->QueryInterface(&framePrivate)))
+        framePrivate->clearOpener();
 }
 
 static void runTest(const string& testPathOrURL)
